fixtures/invalid/tab-attribute.lmk
@metadata key="bad	value"
Tabs are control whitespace.
